# pdf-processor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  changes-to-make.md  next.md  progress.md
.github/workflows/: release.yml
.warden/: NEXT.md  repo-map.md
.warden/plans/: 2026-05-05-coordinate-table-reconstruction-plan.md  2026-05-05-figure-snapshot-extraction-plan.md  2026-05-05-formula-extraction-plan.md  2026-05-05-local-ocr-and-quality-plan.md  2026-05-08-measurable-pdf-quality-improvements-plan.md  2026-05-08-pdf-quality-algorithm-execution-plan.md  2026-05-11-dnv-formula-path-plan.md  2026-05-11-stage1-formula-fp-hardening.md  2026-05-11-stage2-furniture-suppression.md  2026-05-11-stage3-formula-ocr-sidecar.md  2026-05-11-stage4-standards-table-detection.md  2026-05-11-stage5-inline-formatting.md  2026-05-11-stage6-onnx-formula-ocr.md  2026-05-11-stage7-evaluation.md  2026-05-13-next-stage-goals.md  2026-05-14-stage7-5-baseline-consolidation.md  2026-05-15-pdf-tool-comparison-plan.md  2026-05-15-pipeline-merge-extraction.md  2026-05-15-stage8-5-table-precision-refactor.md  2026-05-15-stage8-heading-formula-recovery.md  2026-05-15-stage9-hard-fixture-pack.md  2026-05-15-stage9-image-benchmark-kickoff.md  2026-05-19-pdf-metadata-read-write-plan.md  2026-05-19-stage9-finish-polish-plan.md
Making of an Expert Engineer_8/: Making of an Expert Engineer_8.md
Making of an Expert Engineer_extracted/: Making of an Expert Engineer_extracted.md
docs/: CLI.md  QUALITY_LOOP.md  TESTING.md  TOOL_COMPARISON.md  architecture.md  handoff.md  pdf-internals.md  quickstart.md
docs/plans/: 2026-04-24-pdf-quality-roadmap.md  2026-04-24-pdf-quality-roadmap.yaml
docs/reference/: README.md  cli-and-processors.md  eval-framework.md  external-integrations.md  formula-detection.md  layout-analysis.md  markdown-rendering.md  pdf-extraction.md  pdf-format.md  pipeline.md
docs/specs/: 2026-04-24-auto-suppress-images-on-scan-heavy.md  2026-04-24-encrypted-pdf-error-messaging.md  2026-04-24-symbol-description-spacing.md
example/: ASSESSMENT.md  FIX_PLAN.md  RESEARCH_NOTES.md  SMALL_AGENT_PROMPTS.md  SMALL_AGENT_RUNS.md
legacy/: README.md
legacy/docs/: architecture.md
legacy/notes/: IDEA.md  note.md
legacy/python/: convert2_pdf.py  setup.sh
plans/stages/: baseline.md  plan.md  renderer-refactor.md  rust-python-split-optimisation.md  stage1-polish.md
scripts/: example-audit.sh  fetch-papers.sh  formula-eval.sh  generate-eval-fixtures.sh  install.sh  package-linux-release.sh  quality-diff.sh  quality-report.sh  sidecar-audit.sh
src/: batch.rs  cli.rs  commands.rs  error.rs  lib.rs  main.rs  pipeline.rs
src/document/: types.rs
src/eval/: fixtures.rs  metrics.rs  mod.rs  runner.rs
src/figure/: detect.rs  mod.rs  render.rs
src/formula/: detect.rs  geometric.rs  mod.rs  ocr.rs  ocr_onnx.rs  visual.rs
src/hybrid/: client.rs  mod.rs  page_extract.rs  triage.rs
src/layout/: classifier.rs  drawing_ops.rs  furniture.rs  mod.rs  table.rs  table_detector.rs  table_inference.rs  xycut.rs
src/ocr/: mod.rs  triage.rs
src/pdf/: extractor.rs  metadata.rs  text_cleanup.rs
src/pipeline/: merge.rs  mod.rs
src/processor/: doctor.rs  impose.rs  inspect.rs  metadata.rs  mod.rs  ocr_cmd.rs  page_range.rs  pages.rs  resize.rs  search.rs  update.rs
src/render/: markdown.rs  (+5 more)
tests/: cli_help.rs  convert_cli.rs  dnv_formula_regression.rs  eval_integration.rs  figure_snapshots.rs  formula_fp.rs  formula_ocr.rs  formula_onnx.rs  formulas.rs  furniture.rs  golden.rs  hybrid.rs  install_script.rs  metadata.rs  ocr.rs  page_ops.rs  quality.rs  table_detection.rs
tools/: bench.sh
wiki/: README.md  WIKI.md  evaluation-and-benchmarks.md  improvement-opportunities.md  information-extraction.md  layout-and-reading-order.md  opendataloader-ecosystem.md  tables-forms-and-financials.md  text-extraction.md
(+218 files in other folders)
