[package]
name = "cnv"
version = "0.1.0"
edition = "2021"
description = "Convert files to AI-friendly markdown structures"
license = "MIT"

[[bin]]
name = "cnv"
path = "src/main.rs"

[dependencies]
# PDF processing — bundles MuPDF from source, requires clang for bindgen
mupdf = "0.6.0"
# CLI
clap = { version = "4", features = ["derive"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Error handling
thiserror = "2"
anyhow = "1"
# Text processing
regex = "1"
unicode-segmentation = "1"
# Glob pattern matching for batch input
glob = "0.3"
# Docling hybrid backend (optional runtime, `--hybrid docling`)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
# Second-opinion PDF reader for font names + struct-tree access.
# Gated behind `pdfium-metadata` feature because it dynamically loads
# `libpdfium.so`/`pdfium.dll` at runtime and is not needed for the
# default build. See docs/architecture.md § "pdfium metadata feature".
pdfium-render = { version = "0.9", default-features = false, features = ["thread_safe", "pdfium_latest"], optional = true }

[features]
default = []
# Opt-in font-name + struct-tree metadata via pdfium-render. Needs
# `libpdfium` installed at runtime; see README for setup.
pdfium-metadata = ["dep:pdfium-render"]

[dev-dependencies]
httpmock = "0.7"

[profile.release]
opt-level = 3
lto = true
