[package]
name = "pdf-processor"
version = "0.4.1"
edition = "2021"
description = "Local PDF processor with markdown conversion, inspection, search, and page operations"
license = "MIT"

[lib]
name = "pdf_processor"
path = "src/lib.rs"

[[bin]]
name = "pdfp"
path = "src/main.rs"

[dependencies]
# PDF processing — bundles MuPDF from source, requires clang for bindgen
mupdf = "0.6.0"
# Low-level PDF object editing for document information metadata.
lopdf = { version = "0.40", default-features = false }
# CLI
clap = { version = "4", features = ["derive"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Text processing
regex = "1"
unicode-segmentation = "1"
# PDF date parsing/formatting for metadata commands.
time = { version = "0.3", features = ["parsing"] }
# Glob pattern matching for batch input
glob = "0.3"
# Docling hybrid backend (optional runtime, `--hybrid docling`)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
# Second-opinion PDF reader for font names + struct-tree access.
# Gated behind `pdfium-metadata` feature because it dynamically loads
# `libpdfium.so`/`pdfium.dll` at runtime and is not needed for the
# default build. See docs/TESTING.md for runtime verification notes.
pdfium-render = { version = "0.9", default-features = false, features = ["thread_safe", "pdfium_latest"], optional = true }
# Optional native formula OCR inference path. Built only with `--features onnx-ocr`.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "copy-dylibs", "tls-rustls", "ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }
image = { version = "0.25", optional = true }

[features]
default = []
# Opt-in font-name + struct-tree metadata via pdfium-render. Needs
# `libpdfium` installed at runtime; see README for setup.
pdfium-metadata = ["dep:pdfium-render"]
# Native RapidLaTeX-OCR ONNX formula recognition. Needs ONNX Runtime available
# through `ort`'s downloaded ONNX Runtime binaries at build time.
onnx-ocr = ["dep:ort", "dep:ndarray", "dep:image"]

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
